--- a/views/pages/noUser.ejs
+++ b/views/pages/noUser.ejs
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title><%- PageTitle %></title>
+    <%- include('../partials/style.ejs') %>
+        <title><%- PageTitle %></title>
 </head>
+<%- include('../partials/header.ejs') %>
 
-<body>
-
-</body>
+    <body>
+        <h1>
+            No user found
+        </h1>
+    </body>
 
 </html>
