--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <%- include('../partials/style.ejs') %>
+        <title><%- PageTitle %></title>
+</head>
 <%- include('../partials/header.ejs') %>
 
     <body>
