--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,3 @@
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title><%- PageTitle %></title>
-</head>
 <header>
     <div class="header">
         <nav class="navbar navbar-expand-lg">
@@ -23,6 +16,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users">Users</a>
                     </li>
                 </ul>
             </div>
