--- a/views/partials/style.ejs
+++ b/views/partials/style.ejs
@@ -24,4 +24,15 @@
     .header {
         background-color: rgb(136, 220, 220);
     }
+
+    img {
+        margin: 10px;
+        height: auto;
+        width: 40rem;
+    }
+
+    .navbar-img {
+        height: auto;
+        width: 20rem;
+    }
 </style>
