--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,8 +13,28 @@
 <%- include('../partials/header.ejs') %>
 
     <body>
-        <h1>Home Page</h1>
-    </body>
-    <%- include('../partials/footer.ejs') %>
+        <div class="container">
+            <h1>Welcome to Alberta's Competitive Paintball Scene</h1>
+            <p>Experience the thrill of competitive paintball!</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="/images/2022-07-17 - Fly Free Photography-033.jpg" alt="Competitive Paintball Player"
+                        class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                    <img src="/images/2022-07-17 - Fly Free Photography-665.jpg" alt="Competitive Paintball Player"
+                        class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <div class="container text-center mt-4">
+            <p>Join us for exciting events, team-building experiences, and unforgettable memories.</p>
+            <a class="btn btn-primary" href="about.html">Learn More About Us</a>
+        </div>
+
+        <footer class="bg-dark text-white text-center py-3 mt-4">
+            <p>&copy; 2024 Alberta's Competitive Paintball Scene. All rights reserved.</p>
+        </footer>
+        <%- include('../partials/footer.ejs') %>
 
 </html>
