--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,8 @@
 <header>
     <div class="header">
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="/">My Website</a>
+            <a class="navbar-brand" href="/"><img class="navbar-img" src="/images/Alberta Paintball League-logo.png"
+                    alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
