Added front end validation and tweaked logic for delete endpoint

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
 
 </head>
 
-<%- include('../partials/header.ejs') %>
+<%- include('../partials/nav.ejs') %>
 
     <body>
         <div class="container">
@@ -29,12 +29,11 @@
         </div>
         <div class="container text-center mt-4">
             <p>Join us for exciting events, team-building experiences, and unforgettable memories.</p>
-            <a class="btn btn-primary" href="about.html">Learn More About Us</a>
+            <a class="btn btn-primary" href="/about">Learn More About Us</a>
         </div>
 
-        <footer class="bg-dark text-white text-center py-3 mt-4">
-            <p>&copy; 2024 Alberta's Competitive Paintball Scene. All rights reserved.</p>
-        </footer>
+
         <%- include('../partials/footer.ejs') %>
+    </body>
 
 </html>
