--- a/views/pages/noUser.ejs
+++ b/views/pages/noUser.ejs
@@ -8,12 +8,13 @@
     <%- include('../partials/style.ejs') %>
         <title><%- PageTitle %></title>
 </head>
-<%- include('../partials/header.ejs') %>
+<%- include('../partials/nav.ejs') %>
 
     <body>
         <h1>
             No user found
         </h1>
     </body>
+    <%- include('../partials/footer.ejs') %>
 
 </html>
