--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -8,7 +8,7 @@
     <%- include('../partials/style.ejs') %>
         <title><%- PageTitle %></title>
 </head>
-<%- include('../partials/header.ejs') %>
+<%- include('../partials/nav.ejs') %>
 
     <body>
         <div class="responsecontainer">
@@ -44,6 +44,7 @@
             </div>
         </div>
     </body>
+    <%- include('../partials/footer.ejs') %>
 
 </html>
 
