--- a/views/pages/aboutPage.ejs
+++ b/views/pages/aboutPage.ejs
@@ -9,7 +9,7 @@
         <title><%- PageTitle %></title>
 </head>
 
-<%- include('../partials/header.ejs') %>
+<%- include('../partials/nav.ejs') %>
 
     <body>
         <div class="container mt-4">
