--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -9,7 +9,7 @@
         <title><%- PageTitle %></title>
 </head>
 
-<%- include('../partials/header.ejs') %>
+<%- include('../partials/nav.ejs') %>
 
     <body>
         <div class="row">
@@ -50,5 +50,6 @@
                 <% }) %>
         </div>
     </body>
+    <%- include('../partials/footer.ejs') %>
 
 </html>
