--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,15 @@
-<footer>
+<!-- <footer class="bg-dark text-white text-center py-3 mt-auto">
+    <p></p>
 
+
+</footer> -->
+
+<footer class="footer py-3 text-center py-3 align-items-end ">
+    <div class="container">
+        <span class="text-body-secondary">&copy; 2024 Alberta's Competitive Paintball Scene. All rights reserved.</span>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </footer>
