--- a/views/partials/style.ejs
+++ b/views/partials/style.ejs
@@ -17,7 +17,7 @@
         align-items: center;
         height: 100vh;
         /* Full height of the viewport */
-        /* Light background color */
+
 
     }
 
@@ -34,5 +34,13 @@
     .navbar-img {
         height: auto;
         width: 20rem;
+    }
+
+    .users-container {
+        height: 100%;
+    }
+
+    .container {
+        min-height: auto;
     }
 </style>
