commiting recent work

--- a/views/pages/aboutPage.ejs
+++ b/views/pages/aboutPage.ejs
@@ -16,7 +16,8 @@
 
             <section id="mission" class="mb-4">
                 <h2>Our Mission</h2>
-                <p>At Bragg Creek Paintball, our mission is to provide an exhilarating and safe paintball experience for
+                <p>At Alberta Paintball League, our mission is to provide an exhilarating and safe paintball experience
+                    for
                     players of all ages. We aim to foster teamwork, strategy, and sportsmanship through competitive
                     play.
                 </p>
