--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -37,7 +37,8 @@
 
 <body>
     <h1>404 - Page Not Found</h1>
-    <p>Sorry, the page you are looking for does not exist.</p>
+    <p>Sorry, this page has been hit, and is out of the game!.</p>
+    <img src="/images/paintball-mask-reviews.jpg" alt="">
     <p><a href="/">Go back to Home</a></p>
 </body>
 
