--- a/views/pages/noUser.ejs
+++ b/views/pages/noUser.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <%- include('../partials/style.ejs') %>
         <title><%- PageTitle %></title>
@@ -11,9 +12,12 @@
 <%- include('../partials/nav.ejs') %>
 
     <body>
-        <h1>
-            No user found
-        </h1>
+        <div class="container text-center">
+            <h1>
+                No registered players found under that email.
+            </h1>
+            <h2>Click here to go back to <a href="/users">Users</a></h2>
+        </div>
     </body>
     <%- include('../partials/footer.ejs') %>
 
