--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <%- include('../partials/style.ejs') %>
         <title><%- PageTitle %></title>
@@ -12,10 +13,50 @@
 
     <body>
         <div class="container users-container">
-            <form action="/search" method="GET" class="d-flex">
-                <input type="email" name="email" class="form-control me-2" placeholder="Search for your email" required>
-                <button type="submit" class="btn btn-primary">Search</button>
-            </form>
+            <h1>Registered Players</h1>
+            <div class="mt-3 mb-3">
+                <form action="/search" method="GET" class="d-flex">
+                    <input type="email" name="email" class="form-control me-2" placeholder="Filter by email" required>
+                    <button type="submit" class="btn btn-primary">Search</button>
+                </form>
+            </div>
+            <div class="row">
+                <% users.forEach(function(user) { %>
+                    <div class="col-md-4"> <!-- 3 columns on medium and larger screens -->
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h6 class="card-subtitle mb-2 text-muted">Your Details:</h6>
+                                <p class="card-text"><strong>First Name:</strong>
+                                    <%= user.fname %>
+                                </p>
+                                <p class="card-text"><strong>Last Name:</strong>
+                                    <%= user.lname %>
+                                </p>
+                                <p class="card-text"><strong>Email:</strong>
+                                    <%= user.email %>
+                                </p>
+                                <p class="card-text"><strong>Phone Number:</strong>
+                                    <%= user.phnumber %>
+                                </p>
+                                <p class="card-text"><strong>City:</strong>
+                                    <%= user.city %>
+                                </p>
+                                <p class="card-text"><strong>Province:</strong>
+                                    <%= user.province %>
+                                </p>
+                                <p class="card-text"><strong>Postal Code:</strong>
+                                    <%= user.postalcode %>
+                                </p>
+                                <p class="card-text"><strong>Feedback:</strong>
+                                    <%= user.feedback %>
+                                </p>
+                                <a href=" /update/<%=user.id %>">Update</a>
+                                <a href="/delete/<%= user.id %>">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                    <% }) %>
+            </div>
         </div>
     </body>
     <%- include('../partials/footer.ejs') %>
