Styling changes and tweaked some logic that wasn't compiling correctly

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,9 +17,9 @@
         <div class="container">
             <h1>Welcome to Alberta's Competitive Paintball Scene</h1>
             <p>Experience the thrill of competitive paintball!</p>
-            <h5 class="text-center">
+            <p class="text-center greeting">
                 <%= passGreeting %>
-            </h5>
+            </p>
             <div class="row">
                 <div class="col-md-6">
                     <img src="/images/2022-07-17 - Fly Free Photography-033.jpg" alt="Competitive Paintball Player"
