--- a/views/partials/style.ejs
+++ b/views/partials/style.ejs
@@ -43,4 +43,14 @@
     .container {
         min-height: auto;
     }
+
+    .greeting {
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-style: italic;
+        letter-spacing: 5px;
+    }
+
+    .error-messages {
+        color: red;
+    }
 </style>
