--- a/views/pages/contactPage.ejs
+++ b/views/pages/contactPage.ejs
@@ -93,7 +93,7 @@
                         </div>
 
                         <div class="mb-2 mt-2">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="button" class="btn btn-primary">Submit</button>
                         </div>
 
                     </form>
