--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <%- include('../partials/style.ejs') %>
-        <title><%- PageTitle %></title>
+
+
 
 </head>
+-->
+<%- include('../partials/header.ejs') %>
 
-<%- include('../partials/nav.ejs') %>
+
 
     <body>
         <div class="container">
@@ -20,6 +22,10 @@
             <p class="text-center greeting">
                 <%= passGreeting %>
             </p>
+            <h4 class="text-center delete-message">
+                <%= deleteMessage %>
+            </h4>
+
             <div class="row">
                 <div class="col-md-6">
                     <img src="/images/2022-07-17 - Fly Free Photography-033.jpg" alt="Competitive Paintball Player"
