--- a/views/partials/style.ejs
+++ b/views/partials/style.ejs
@@ -50,7 +50,8 @@
         letter-spacing: 5px;
     }
 
-    .error-messages {
+    .error-messages,
+    .delete-message {
         color: red;
     }
 </style>
