final commit before submitting

--- a/views/pages/contactPage.ejs
+++ b/views/pages/contactPage.ejs
@@ -79,8 +79,8 @@
                         </div>
                         <div class="mb-3 mt-3">
                             <label for="feedback" class="form-label">Feedback</label>
-                            <input type="text" class="form-control feedback-field" id="feedback" name="feedback"
-                                required>
+                            <textarea type="text" class="form-control feedback-field" id="feedback" name="feedback"
+                                required rows="5"> </textarea>
                         </div>
 
                         <div class="mb-2 mt-2">
