--- a/views/pages/updatePage.ejs
+++ b/views/pages/updatePage.ejs
@@ -9,7 +9,7 @@
 
             <div class="container mt-4" style="background-color: rgb(221, 221, 221);">
                 <h1>Update information</h1>
-                <form action="/updateUser/<%= user.id %>" method="POST">
+                <form id="contact-form" action="/updateUser/<%= user.id %>" method="POST">
                     <div class="row">
                         <div class="col">
                             <div class="mb-3 mt-3">
@@ -45,24 +45,36 @@
                             </div>
                             <div class="mb-3">
                                 <label for="province" class="form-label">Province</label>
-                                <input type="text" name="province" class="form-control" id="province"
-                                    placeholder="<%= user.province %>">
+                                <select type="text" name="province" class="form-control" id="province" required>
+                                    <option value="AB">Alberta (AB)</option>
+                                    <option value="BC">British Colombia (BC)</option>
+                                    <option value="MB">Manitoba (MB)</option>
+                                    <option value="NL">New Brunswick (NB)</option>
+                                    <option value="NS">Newfoundland & Labrador (NL)</option>
+                                    <option value="ON">Ontario (ON)</option>
+                                    <option value="PE">Prince Edward Island (PE)</option>
+                                    <option value="QC">Quebec (QC)</option>
+                                    <option value="SK">Saskatchewan (SK)</option>
+                                    <option value="NT">Northwest Territories (NT)</option>
+                                    <option value="NU">Nunavut (NU)</option>
+                                    <option value="YT">Yukon (YT)</option>
+                                </select>
                             </div>
                             <div class="mb-3">
                                 <label for="postalcode" class="form-label">Postal Code</label>
                                 <input type="text" name="postalcode" class="form-control" id="postalcode"
-                                    placeholder="<%= user.postalcode %>">
+                                    placeholder="<%= user.postalcode %>" required>
                             </div>
                         </div>
                     </div>
                     <div class="mb-3 mt-3">
                         <label for="feedback" class="form-label">Feedback</label>
-                        <input type="text" class="form-control feedback-field" id="feedback" name="feedback"
-                            placeholder="<%= user.feedback %>">
+                        <textarea type="text" class="form-control feedback-field" id="feedback" name="feedback" rows="5"
+                            required> <%= user.feedback %></textarea>
                     </div>
 
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button onclick="handleContactForm()" type="button" class="btn btn-primary">Submit</button>
 
                 </form>
             </div>
