--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <%- include('../partials/style.ejs') %>
-        <script src="index.js" defer></script>
+        <script src="/index.js" defer></script>
         <title><%- PageTitle %></title>
 
 </head>
